alert ui fix, notification icon fix, table text overflow fix, newsletters page fix

--- a/src/assets/sass/components/_alerts.scss
+++ b/src/assets/sass/components/_alerts.scss
@@ -15,7 +15,8 @@
     height: rem(56);
 
     &.swal2-success {
-        width: 5em;
-        height: 5em;
+        width: 5em !important;
+        height: 5em !important;
     }
 }
+
