--- a/src/assets/sass/components/_notifications.scss
+++ b/src/assets/sass/components/_notifications.scss
@@ -11,6 +11,7 @@
     text-align: center;
     color: #fff;
     font-size: 10px;
+    z-index: -1;
   }
 
   &.open ul.dropdown-menu.dropdown-alerts {
