--- a/src/assets/sass/layouts/_grid.scss
+++ b/src/assets/sass/layouts/_grid.scss
@@ -21,3 +21,8 @@
       border-radius: 15px;
     }
   }
+
+.flexmasonry-item {
+    padding: 0.5rem;
+} 
+  
